kube_homework/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  namespace: miniapp
  labels:
    app: kuber-dp
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
      - name: kuber-app
        image: maksonday/miniapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000  
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
